# p1-quicksort-xeneder

./: .gitignore  README.md
Task1/: CMakeLists.txt  main.cpp  sort.h
Task1/Google_tests/: CMakeLists.txt  main.cpp  tests1.cpp
Task2/: array.h  list.h  main.cpp
Task2/Google_tests/: CMakeLists.txt  tests2.cpp
Task3/: dictionary.h  main.cpp
Task3/Google_tests/: CMakeLists.txt  tests3.cpp
